--- a/src/App.css
+++ b/src/App.css
@@ -1,124 +1,182 @@
-@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Dawning+of+a+New+Day&family=Indie+Flower&family=Passion+One:wght@700&family=Rubik+Dirt&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Dawning+of+a+New+Day&family=Indie+Flower&family=Passion+One:wght@700&family=Rubik+Dirt&display=swap");
 
 .App {
   text-align: center;
 }
 
-.nav-bar{
-  display:flex;
+.nav-bar {
+  display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
-  background-color: #F7B655;
-  color:white;
+  background-color: #f7b655;
+  color: white;
   text-decoration: none;
   font-weight: bold;
   font-size: 120%;
-  height:50px
+  height: 50px;
 }
 
-
-
-.link-home{
+.link-home {
   text-decoration: none;
-  color:white;
+  color: white;
 }
 
-.link-dropdown{
+.link-dropdown {
   text-decoration: none;
-  color:#F7B655;
+  color: #f7b655;
   font-weight: bold;
   padding: 5px;
-  text-shadow: 2px 2px 10px #D0CECB;
-
+  text-shadow: 2px 2px 10px #d0cecb;
 }
 
-#demo-positioned-button{
-  background-color: #F7B655;
-  border:none;
-  color:white;
+#demo-positioned-button {
+  background-color: #f7b655;
+  border: none;
+  color: white;
   font-weight: bold;
   font-size: 20px;
-  text-transform:capitalize;
+  text-transform: capitalize;
 }
 
-#demo-positioned-menu{
-  margin-left:11%;
+#demo-positioned-menu {
+  margin-left: 11%;
 }
 
-.navbar-btn{
-  background-color: #F7B655;
-  border:none;
-  color:white;
+.navbar-btn {
+  background-color: #f7b655;
+  border: none;
+  color: white;
   font-weight: bold;
   font-size: 20px;
 }
 
-.wodType{
+.wodType {
   font-family: Rubik Dirt;
   font-weight: lighter;
-  font-size:300%;
-  color:white
+  font-size: 350%;
+  color: white;
 }
 
-#exercises{
-font-family: Indie Flower;
-font-size: 200%;
-color:white;
-margin-bottom:-1%;
-margin-top:-1%
+#exercises {
+  font-family: Indie Flower;
+  font-size: 200%;
+  color: white;
+  margin: 1% 5%;
 }
 
-#wod-explanation{
+#wod-explanation {
   background-image: url("../public/images/blackboard-modified.png");
   background-repeat: no-repeat;
-  background-size:cover;
-  height: max-content;
-  width:inherit;
-  background-color: black;
+  background-size: cover;
   background-position: center;
-  color:white;
-  border-radius: 70px;
-  padding: 15px 15px 45px 15px;
-  margin-top:5%;
-  margin:10%;
-  font-size: 80%;
-  box-shadow: 5px 5px 7px #D0CECB;
+  padding-top: 20px;
+  height:max-content;
+  background-color: black;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-#wod-explanation h4{
+#wod-explanation h4 {
   font-size: 200%;
 }
 
-#wods-list{
-  display:flex;
+#wods-list {
+  display: flex;
   flex-wrap: wrap;
   justify-content: center;
-
 }
 
-#each-wod-list{
-  background-color: rgb(208, 206, 203, 0.5);
-  margin:5%;
-  padding:3%;
-  width:15%;
-  border-radius: 20px;
+#each-wod-list {
+  background-color: rgb(208, 206, 203, 0.7);
+  margin: 5%;
+  padding: 1% 3%;
+  width: 15%;
+  border-radius: 25px;
   text-decoration: none;
-  box-shadow: 5px 5px 7px #D0CECB;
-
+  box-shadow: 0px 0px 20px 5px rgb(208, 206, 203, 0.5);
 }
 
-#wod-list-link{
-  color:#F7B655;
+#wod-list-link {
+  color: black;
   font-weight: bolder;
+  font-size: 3vw;
+  text-shadow: 0px 0px 15px 2px black;
+  font-family: Rubik Dirt;
 
+  font-weight: lighter;
 }
 
-#the-girls{
+#the-girls {
+  padding-top: 20px;
+
   background-image: url("../public/images/the-girls-annie.jpg");
   background-repeat: no-repeat;
-  background-size:cover;
+  background-size: cover;
   background-position: center;
+}
+
+#heroes {
+  padding-top: 20px;
+  background-image: url("../public/images/heroes.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+#weights {
+  padding-top: 20px;
+
+  background-image: url("../public/images/weights.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.benchmark-btn {
+  padding: 20px;
+  border: none;
+  border-radius: 20px;
+  background-color: white;
+  font-size: 15px;
+  font-weight: bold;
+  color: black;
+  margin-bottom: 60px;
+  margin-top: -60px;
+}
+
+#benchmark-form {
+  background-color: white;
+  width: 250px;
+  color: black;
+  border-radius: 20px;
+  margin-bottom: 30px 
+}
+
+.benchmark-form-btn {
+  padding: 13px;
+  border: none;
+  border-radius: 20px;
+  background-color: #f7b655;
+  font-size: 13px;
+  font-weight: bold;
+  color: black;
+  margin: 30px;
 
 }
 
+#score{
+  margin:25px
+}
+
+#benchmark-form input{
+  margin-left:15px;
+  border-radius: 5px;
+  border:none
+}
+
+#benchmark-form label{
+  font-weight: bold;
+}
