favWods in profile, search finished

--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,11 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
-  background-color: #f7b655;
+  background-color: #FFB000;
   color: white;
   text-decoration: none;
   font-weight: bold;
-  font-size: 120%;
+  font-size: 2vw;
   height: 50px;
 }
 
@@ -24,18 +24,19 @@
 
 .link-dropdown {
   text-decoration: none;
-  color: #f7b655;
+  color: #FFB000;
   font-weight: bold;
   padding: 5px;
   text-shadow: 2px 2px 10px #d0cecb;
 }
 
 #demo-positioned-button {
-  background-color: #f7b655;
+  background-color: #FFB000;
   border: none;
   color: white;
   font-weight: bold;
-  font-size: 20px;
+  width:100%;
+  font-size: 2vw;
   text-transform: capitalize;
 }
 
@@ -44,7 +45,7 @@
 }
 
 .navbar-btn {
-  background-color: #f7b655;
+  background-color: #FFB000;
   border: none;
   color: white;
   font-weight: bold;
