--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,30 @@
   text-decoration: none;
   font-weight: bold;
   font-size: 2vw;
-  height: 20%;
+  height: 9vh;
+}
+
+.nav-bar img{
+  border-radius:50px;
+}
+
+.nav-bar input {
+  border-radius: 15px;
+  border:none;
+  margin:10px;
+  padding: 7px
+}
+.profile-dropdown{
+  margin-left:-30px
+}
+
+#search-btn {
+  border-radius: 15px;
+  border:none;
+  box-shadow: 2px 2px 10px rgb(159, 159, 159);
+  padding:7px 15px
+
+
 }
 
 .link-home {
@@ -28,6 +51,7 @@
   font-weight: bold;
   padding: 5px;
   text-shadow: 2px 2px 10px #d0cecb;
+  
 }
 
 #demo-positioned-button {
@@ -41,7 +65,25 @@
 }
 
 #demo-positioned-menu {
-  margin-left: 11%;
+  margin-left: 40px;
+}
+
+#demo-positioned-menu p{
+  margin-left: 15px;
+  margin-right:15px;
+  border-radius: 5px;
+  color:black;
+  background-color: #F3F2F2;
+}
+
+#demo-positioned-menu button{
+border-radius: 15px;
+border:none;
+padding:10px;
+box-shadow: 2px 2px 10px #d0cecb;
+font-weight: bold;
+background-color: #D5D4D2;
+
 }
 
 .navbar-btn {
@@ -71,13 +113,14 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  padding-top: 20px;
-  height:max-content;
+  height:100%;
   background-color: black;
+  padding:100px;
   color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
+  
 }
 
 #wod-explanation h4 {
@@ -145,7 +188,6 @@
   font-weight: bold;
   color: black;
   margin-bottom: 60px;
-  margin-top: -60px;
 }
 
 #benchmark-form {
@@ -184,18 +226,18 @@
 
 #landing-page{
   padding-top: 20px;
-
   background-image: url(../src/assets/images/kettlebell.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height:90vh;
-  color:white
+  color:white;
+  height:88vh
 }
 
 #landing-page img{
-  margin-top:100px;
+  margin-top:40px;
   border-radius: 70px;
+  width:40%;
 
 }
 
@@ -218,7 +260,8 @@
 }
 
 .highscores div{
-  margin:10px
+  margin:20px 10px
+  
 }
 
 .highscores img{
@@ -231,4 +274,14 @@
 
 #profile-info img{
   border-radius:100px
+}
+
+#wodname-favbtn{
+  display:flex;
+  flex-direction: row;
+justify-content: space-around;}
+
+#line-chart{
+  width:60%
+
 }
