--- a/src/App.css
+++ b/src/App.css
@@ -285,3 +285,15 @@ justify-content: space-around;}
   width:60%
 
 }
+
+.error-notfound{
+  margin-top: 100px;
+  text-shadow: 3px 3px 5px  rgb(189, 189, 189, 0.9);
+  background-color:  rgb(189, 189, 189, 0.4);
+  padding: 15px;
+  width:70%;
+  margin-left:12%;
+  border-radius: 20px;
+  box-shadow: 3px 3px 5px  rgb(189, 189, 189, 0.9);
+
+}
