--- a/src/App.css
+++ b/src/App.css
@@ -264,6 +264,7 @@
 
 .highscores img {
   border-radius: 100px;
+  
 }
 
 .ranking-username {
@@ -445,6 +446,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 #each-favWod {
@@ -489,4 +491,43 @@
   box-shadow: 3px 3px 5px rgb(189, 189, 189, 0.9);
   background-color: #ffb000;
   color: white;
+}
+
+
+
+#each-comment{
+  background-color: rgb(195, 195, 195, 0.5);
+  padding:5px 15px;
+  margin:10px;
+  border-radius: 15px;
+  box-shadow: 3px 3px 5px rgb(106, 106, 106 , 0.9);
+
+}
+
+.bold{
+  font-weight: bold;
+}
+
+#comment-form{
+  background-color: rgb(195, 195, 195, 0.8);
+  padding:15px;
+  margin:10px;
+  border-radius: 15px;
+  box-shadow: 3px 3px 5px rgb(106, 106, 106 , 0.9);
+
+}
+
+#comment-form input{
+  border:none;
+  border-radius: 10px;
+  margin:5px;
+  box-shadow: 3px 3px 5px rgb(106, 106, 106 , 0.9);
+
+}
+
+#comment input{
+  height:50px;
+  display:flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
