--- a/src/App.css
+++ b/src/App.css
@@ -184,8 +184,7 @@
   font-weight: bold;
   color: black;
   margin-bottom: 60px;
-  box-shadow: 3px 3px 5px rgb(189, 189, 189, 0.9);
-
+  box-shadow: 3px 3px 5px rgb(189, 189, 189, 0.3);
 }
 
 #benchmark-form {
@@ -206,7 +205,6 @@
   color: black;
   margin: 30px;
   box-shadow: 3px 3px 5px rgb(189, 189, 189, 0.9);
-
 }
 
 #score {
@@ -249,7 +247,6 @@
   color: blackwhite;
   margin: 30px;
   box-shadow: 3px 3px 5px rgb(189, 189, 189, 0.9);
-
 }
 
 .highscores {
@@ -264,7 +261,6 @@
 
 .highscores img {
   border-radius: 100px;
-  
 }
 
 .ranking-username {
@@ -274,7 +270,6 @@
 #profile-info img {
   border-radius: 100px;
   box-shadow: 3px 3px 5px rgb(189, 189, 189, 0.9);
-
 }
 
 #wodname-favbtn {
@@ -284,7 +279,7 @@
 }
 
 #line-chart {
-  width: 60%;
+  width: 70vw;
 }
 
 .error-notfound {
@@ -468,7 +463,7 @@
   font-weight: lighter;
   font-size: 20px;
   color: black;
-  margin-bottom:20px
+  margin-bottom: 20px;
 }
 
 #delete-favWod {
@@ -480,7 +475,7 @@
   background-color: #ff4f15;
   color: white;
   width: 60px;
-  margin:20px
+  margin: 20px;
 }
 
 #see-wod {
@@ -493,41 +488,59 @@
   color: white;
 }
 
-
-
-#each-comment{
-  background-color: rgb(195, 195, 195, 0.5);
-  padding:5px 15px;
-  margin:10px;
-  border-radius: 15px;
-  box-shadow: 3px 3px 5px rgb(106, 106, 106 , 0.9);
-
+#comments {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
-.bold{
+#each-comment {
+  background-color: rgb(195, 195, 195, 0.5);
+  padding: 5px 15px;
+  margin: 10px;
+  border-radius: 15px;
+  box-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
+  margin-bottom: 25px;
+}
+
+.bold {
   font-weight: bold;
 }
 
-#comment-form{
+#comment-form {
   background-color: rgb(195, 195, 195, 0.8);
-  padding:15px;
-  margin:10px;
+  padding: 15px;
+  margin: 10px;
   border-radius: 15px;
-  box-shadow: 3px 3px 5px rgb(106, 106, 106 , 0.9);
-
+  box-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
 }
 
-#comment-form input{
-  border:none;
+#comment-form input {
+  border: none;
   border-radius: 10px;
-  margin:5px;
-  box-shadow: 3px 3px 5px rgb(106, 106, 106 , 0.9);
-
+  margin: 5px;
+  height:25px;
+  box-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
 }
 
-#comment input{
-  height:50px;
-  display:flex;
+#comment input {
+  height: 50px;
+  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+}
+
+#username-img{
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+#username-img img{
+  margin-right: 10px;
+  width:55px;
+  border-radius: 50%;
 }
