--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@
   font-weight: bold;
   font-size: 150%;
   height: 9vh;
+  text-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
+
 }
 
 .nav-bar img {
@@ -27,7 +29,9 @@
   border: none;
   margin: 10px;
   padding: 7px;
-  width: 12vw
+  width: 12vw;
+  box-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
+
 }
 .profile-dropdown {
   margin-left: -30px;
@@ -45,6 +49,7 @@
 .link-home {
   text-decoration: none;
   color: white;
+
 }
 
 .link-dropdown {
@@ -64,6 +69,8 @@
   font-size: 100%;
   height:50px;
   text-transform: capitalize;
+  text-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
+
 }
 
 #demo-positioned-menu {
@@ -76,6 +83,8 @@
   border-radius: 5px;
   color: black;
   background-color: #f3f2f2;
+  text-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
+
 }
 
 #demo-positioned-menu button {
@@ -100,6 +109,8 @@
   font-weight: lighter;
   font-size: 350%;
   color: white;
+  text-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
+
 }
 
 #exercises {
@@ -107,6 +118,7 @@
   font-size: 200%;
   color: white;
   margin: 1% 5%;
+  text-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
 }
 
 .blackboard-bg {
@@ -118,7 +130,7 @@
   background-color: black;
   padding: 100px;
   color: white;
-  min-height: 65vh;
+  min-height: 70vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -135,6 +147,8 @@
 
 #wod-explanation h4 {
   font-size: 200%;
+  text-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
+
 }
 
 #wods-list {
@@ -150,7 +164,8 @@
   width: 15%;
   border-radius: 25px;
   text-decoration: none;
-  box-shadow: 0px 0px 20px 5px rgb(208, 206, 203, 0.5);
+  box-shadow: 3px 3px 10px 6px rgb(106, 106, 106, 0.6);
+
 }
 
 #wod-list-link {
@@ -159,6 +174,7 @@
   font-size: 3vw;
   text-shadow: 0px 0px 15px 2px black;
   font-family: Rubik Dirt;
+  text-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
 
   font-weight: lighter;
 }
@@ -170,6 +186,8 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  min-height: 100vh;
+
 }
 
 #heroes {
@@ -178,6 +196,9 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  min-height: 100vh;
+  min-width: 100vw
+
 }
 
 #weights {
@@ -187,6 +208,8 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  min-height: 100vh;
+
 }
 
 .benchmark-btn {
@@ -198,7 +221,9 @@
   font-weight: bold;
   color: black;
   margin-bottom: 60px;
-  box-shadow: 3px 3px 5px rgb(189, 189, 189, 0.3);
+  box-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
+  text-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
+
 }
 
 #benchmark-form {
@@ -218,7 +243,9 @@
   font-weight: bold;
   color: black;
   margin: 30px;
-  box-shadow: 3px 3px 5px rgb(189, 189, 189, 0.9);
+  box-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
+  text-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
+
 }
 
 #score {
@@ -229,6 +256,7 @@
   margin-left: 15px;
   border-radius: 5px;
   border: none;
+
 }
 
 #benchmark-form label {
@@ -249,7 +277,19 @@
   margin-top: 40px;
   border-radius: 70px;
   width: 40%;
-  box-shadow: 3px 3px 5px 10px rgb(106, 106, 106, 0.2);
+ 
+}
+
+
+#landing-page p {
+  font-size: 40px;
+  font-weight: bold;
+text-align: center;
+ color:#ffb000;
+ margin:-5px;
+ font-family: Rubik Dirt ;
+ font-weight: lighter;
+ text-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
 
 }
 
@@ -260,9 +300,11 @@
   background-color: #ffb000;
   font-size: 20px;
   font-weight: bold;
-  color: blackwhite;
+  color: white;
   margin: 30px;
   box-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
+  text-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
+
 }
 
 
@@ -271,11 +313,21 @@
 display:flex;
 flex-direction: column;
 }
+
 .login-input input{
   border-radius:5px;
-  margin:10px
+  margin:10px;
+  box-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
+
 }
 
+#login h1{
+  text-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
+}
+
+#signup h1{
+  text-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
+}
 
 #login button{
   padding: 15px 40px;
@@ -288,6 +340,8 @@ flex-direction: column;
   color: Black;
   margin: 30px 30px 30px 15px;
   box-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
+  text-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
+
 }
 
 
@@ -302,6 +356,7 @@ flex-direction: column;
   color: black;
   margin: 30px 30px 30px 15px;
   box-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
+  text-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
 }
 
 .highscores {
@@ -317,10 +372,14 @@ flex-direction: column;
 .highscores img {
   border-radius: 100px;
   margin-top: 10px;
+  box-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
+
 }
 
 .ranking-username {
   font-weight: bold;
+  text-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
+
 }
 
 #profile-info {
@@ -328,7 +387,7 @@ flex-direction: column;
 }
 
 #profile-info img {
-  border-radius: 100px;
+  border-radius: 150px;
   box-shadow: 3px 3px 5px rgb(189, 189, 189, 0.9);
 }
 
@@ -442,6 +501,8 @@ flex-direction: column;
 }
 
 
+
+#each-friend{margin:15px}
 
 #each-friend img {
   border-radius: 50%;
@@ -643,6 +704,8 @@ flex-direction: column;
   background-color: #ffb000;
   color: white;
   font-weight: bold;
+  text-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
+
   font-size: 20px;
   box-shadow: 3px 3px 5px rgb(106, 106, 106, 0.9);
 
@@ -653,4 +716,10 @@ flex-direction: column;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+#banner{
+  width:70vw;
+  border-radius: 20px;
+  margin-top: -70px
 }
