--- a/src/App.css
+++ b/src/App.css
@@ -678,7 +678,7 @@ flex-direction: column;
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
-  
+  margin-top:10px
 }
 
 #username-img img {
